Added JBR part to JBR API version

--- a/src/jetbrains.api/version.properties
+++ b/src/jetbrains.api/version.properties
@@ -1,5 +1,5 @@
 # When any changes are made to jetbrains.api module, hash and version value MUST be updated in this file.
-# JBR API version has following format: MAJOR.MINOR.PATCH
+# Version has the following format: MAJOR.MINOR.PATCH
 #
 # How to increment JBR API version?
 # 1. For small changes if no public API was changed (e.g. only javadoc changes) - increment PATCH
@@ -11,4 +11,4 @@ VERSION = 0.0.0
 # Hash is used to track changes to jetbrains.api, so you would not forget to update version when needed.
 # When you make any changes, "make jbr-api" will fail and ask you to update hash and version number here.
 
-HASH = 3C4D78F67E1D6F7A4544C31AB44BA51
+HASH = 36915F53D8A187F997D6DC7A944F9466
